finished clunker content and formatting

--- a/basketweave.html
+++ b/basketweave.html
@@ -200,7 +200,7 @@
         </figcaption>
       </figure>
       <p>
-        These components that come with the Basketweave include various diodes,
+        The components that come with the Basketweave include various diodes,
         capacitors, fuses, and resistors.
       </p>
       <figure>
@@ -256,6 +256,22 @@
           <i>The back of the finished Basketweave PCB</i>
         </figcaption>
       </figure>
+      <p>
+        The PCB has also been made "hotswappable" by soldering 0305 Mill-Max
+        sockets in each of the switch sockets. This allows for switches to be
+        installed and uninstalled by simply inserting the switches into the PCB
+        as opposed to soldering and desoldering them.
+      </p>
+      <figure>
+        <img
+          src="imgs/keyboards/basketweave/bw_millmax.jpg"
+          alt="A picture of Basketweave PCB being mill-maxed"
+          class="center__image"
+        />
+        <figcaption class="caption">
+          <i>Mill-Maxing the Basketweave PCB with 0305 Mill-Max sockets</i>
+        </figcaption>
+      </figure>
 
       <!-- Build specs; start with the specs at the beginning -->
       <h2 style="margin-top: 60px">Build Specification</h2>
@@ -284,23 +300,6 @@
         />
         <figcaption class="caption">
           <i>The configuration of the Basketweave</i>
-        </figcaption>
-      </figure>
-
-      <p>
-        The PCB has also been made "hotswappable" by soldering 0305 Mill-Max
-        sockets in each of the switch sockets. This allows for switches to be
-        installed and uninstalled by simply inserting the switches into the PCB
-        as opposed to soldering and desoldering them.
-      </p>
-      <figure>
-        <img
-          src="imgs/keyboards/basketweave/bw_millmax.jpg"
-          alt="A picture of Basketweave PCB being mill-maxed"
-          class="center__image"
-        />
-        <figcaption class="caption">
-          <i>Mill-Maxing the Basketweave PCB with 0305 Mill-Max sockets</i>
         </figcaption>
       </figure>
 
