--- a/sat75.html
+++ b/sat75.html
@@ -209,10 +209,27 @@
         </figcaption>
       </figure>
       <p>
-        The Satisfaction 75 also features an OLED screen, which can programmed
-        to display various images. By default, the PCB is flashed with a screen
-        that serves as a dashboard, displaying the time, date, and indicating
-        whether certain keys are active, such as caps lock.
+        The stock PCB of the Satisfaction 75 is requires soldering the switches,
+        OLED screen, and ALPS encoder. The PCB has been made "hotswappable" by
+        soldering 3305 Mill-Max sockets in each of the switch sockets. This
+        allows for switches to be installed and uninstalled by simply inserting
+        the switches into the PCB as opposed to soldering and desoldering them.
+      </p>
+      <figure>
+        <img
+          src="imgs/keyboards/satisfaction75/sat75_millmax.jpg"
+          alt="A picture of my Satisfaction 75 PCB"
+          class="center__image"
+        />
+        <figcaption class="caption">
+          <i>The finished Satisfaction 75 PCB</i>
+        </figcaption>
+      </figure>
+      <p>
+        The OLED screen on the Satisfaction 75 can be programmed to display
+        various images. By default, the PCB is flashed with a screen that serves
+        as a dashboard, displaying the time, date, and indicating whether
+        certain keys are active, such as caps lock.
       </p>
       <figure>
         <video
@@ -220,7 +237,7 @@
           controls
           class="center__image project__video"
         ></video>
-        <figcaption class="caption" style="margin-top: -40px">
+        <figcaption class="caption" style="margin-top: -50px">
           Some of the possible displays on the OLED screen of the Satisfaction
           75
         </figcaption>
@@ -243,7 +260,7 @@
           controls
           class="center__image project__video"
         ></video>
-        <figcaption class="caption" style="margin-top: -40px">
+        <figcaption class="caption" style="margin-top: -50px">
           The bongo cat display on the OLED screen of the Satisfaction 75
         </figcaption>
       </figure>
@@ -290,23 +307,6 @@
         />
         <figcaption class="caption">
           <i>The GMK Modern Dolch 2 base kit</i>
-        </figcaption>
-      </figure>
-      <p>
-        The stock PCB of the Satisfaction 75 is requires soldering the switches,
-        OLED screen, and ALPS encoder. The PCB has been made "hotswappable" by
-        soldering 3305 Mill-Max sockets in each of the switch sockets. This
-        allows for switches to be installed and uninstalled by simply inserting
-        the switches into the PCB as opposed to soldering and desoldering them.
-      </p>
-      <figure>
-        <img
-          src="imgs/keyboards/satisfaction75/sat75_millmax.jpg"
-          alt="A picture of my Satisfaction 75 PCB"
-          class="center__image"
-        />
-        <figcaption class="caption">
-          <i>The finished Satisfaction 75 PCB</i>
         </figcaption>
       </figure>
 
