fixed typos in clunker page

--- a/clunker.html
+++ b/clunker.html
@@ -249,10 +249,10 @@
         The name "Clunker" is an informal reference to old cars, as the use of
         solenoids can be seen in both cars and old-fashioned keyboards.
         Solenoids were primarily used in IBM typewriters in order to prevent the
-        activation of multiple keys at the same time, and they are responsible
-        for the "ticking" noise that typewriters make when typing. During the
-        transition from typewriters to keyboards, the first few IBM keyboards,
-        such as the
+        activation of multiple keys at the same time, and they are also
+        responsible for the "ticking" noise that typewriters make while typing.
+        During the transition from typewriters to keyboards, the first few IBM
+        keyboards, such as the
         <a href="https://www.youtube.com/watch?v=ZT9CHub9Cxs" target="_blank"
           >IBM 5251</a
         >, featured a solenoid whose sole purpose was to make the same noise as
@@ -283,7 +283,7 @@
         <li><strong>Foam(s): </strong>Stabilizer foam pads (from KBDfans)</li>
       </ul>
       <p>
-        The stabilizer foam pads are thin pads that are place between each of
+        The stabilizer foam pads are thin pads that are placed between each of
         the stabilizer slots. This foam dampens the sound of the stabilizer when
         it makes contact with the PCB during a keypress.
       </p>
