revised intro section

--- a/index.html
+++ b/index.html
@@ -124,25 +124,31 @@
           I was born and raised in a moderately small city in California called
           Escondido by two immigrant parents from Vietnam. Speaking Vietnamese
           at home while speaking English in school resulted in me being fluent
-          in English but only being able to speak and understand Vietnamese. At
-          a young age, I developed a deep interest in mathematics and often
+          in English but only being able to speak and understand Vietnamese.
+        </p>
+        <p>
+          At a young age, I developed a deep interest in mathematics and often
           consulted with my teachers in school for further studying. I have also
           always been curious about how things work, especially technology.
           These interests led me to pursue a degree in computer engineering.
+          During my time in university, I have become deeply interested in
+          embedded systems and machine learning. Through the courses I have
+          taken, I have become highly proficient in Python and C++. I am
+          familiar with various Python DS/ML libraries such as Pandas, PyTorch,
+          and TensorFlow as well as object-oriented programming in C++.
         </p>
         <p>
           I began building mechanical keyboards as a hobby during the
-          coronavirus pandemic in late 2020. I have constructed several
-          keyboards in different layouts, and I plan on creating more in the
-          future. I especially enjoy this hobby as it allows me to work with
-          hardware through assembling each keyboard and software while
-          programming its firmware. I have documented some of the keyboards that
-          I have already built at the bottom of my portfolio.
+          coronavirus pandemic in late 2020. I especially enjoy this hobby as it
+          allows me to work with hardware through soldering the electrical
+          components of each keyboard, and software while programming its
+          firmware. I have documented some of the keyboards that I have already
+          built at the bottom of my portfolio.
         </p>
         <div class="resume__wrapper">
           <a
             class="resume__link"
-            href="https://drive.google.com/file/d/1Vv_7ueQCquisUEsNFqdzj8sfhbmRGd-j/view?usp=sharing"
+            href="https://docs.google.com/document/d/1sOB0IxjtlWc8TuXhbfQokPtPLNwxjjyTo1suWm4r8DQ/edit?usp=sharing"
             target="_blank"
           >
             <i class="fa-solid fa-file"></i>
