--- a/bm65.html
+++ b/bm65.html
@@ -63,6 +63,21 @@
     ></script>
   </head>
 
+  <!-- Google tag (gtag.js) -->
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-5R9LBTMJKB"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "G-5R9LBTMJKB");
+  </script>
+
   <body>
     <header>
       <div class="logo">
