revised website content and start transferring new project

--- a/index.html
+++ b/index.html
@@ -136,34 +136,42 @@
       </p>
       <div class="about-me__body">
         <p>
-          I was born and raised in a moderately small city in California called
-          Escondido by two immigrant parents from Vietnam. Speaking Vietnamese
-          at home while speaking English in school resulted in me being fluent
-          in English but only being able to speak and understand Vietnamese.
+          I was born and raised in Escondido, California by two immigrant
+          parents from Vietnam. Speaking Vietnamese at home while speaking
+          English in school resulted in me being fluent in English but only
+          being able to speak and understand Vietnamese.
         </p>
         <p>
           At a young age, I developed a deep interest in mathematics and often
           consulted with my teachers in school for further studying. I have also
           always been curious about how things work, especially technology.
           These interests led me to pursue a degree in computer engineering.
+        </p>
+        <p>
           During my time in university, I have become deeply interested in
-          embedded systems and machine learning. Through the courses I have
-          taken, I have become highly proficient in Python and C++. I am
-          familiar with various Python DS/ML libraries such as Pandas, PyTorch,
-          and TensorFlow as well as object-oriented programming in C++.
+          embedded systems and backend development. Through the courses I have
+          taken, developed a strong foundation in backend languages such as
+          Python, MySQL, and C++. I have also gained experience with frontend
+          web development using JavaScript libraries and frameworks such as
+          React, Node, and Express through the projects that I have made both
+          personally, and through the courses I have taken in university. I am
+          also familiar with various Python DS/ML libraries such as Pandas,
+          PyTorch, and TensorFlow.
         </p>
         <p>
           I began building mechanical keyboards as a hobby during the
           coronavirus pandemic in late 2020. I especially enjoy this hobby as it
           allows me to work with hardware through soldering the electrical
-          components of each keyboard, and software while programming its
-          firmware. I have documented some of the keyboards that I have already
-          built at the bottom of my portfolio.
+          components onto each keyboard, and software while programming its
+          firmware. My interest in this hobby has led me to create various tools
+          related to mechanical keyboards that I use regularly in this hobby
+          that can be viewed in my projects below. I have also documented some
+          of the keyboards in my collection at the bottom of my portfolio.
         </p>
         <div class="resume__wrapper">
           <a
             class="resume__link"
-            href="https://docs.google.com/document/d/1sOB0IxjtlWc8TuXhbfQokPtPLNwxjjyTo1suWm4r8DQ/edit?usp=sharing"
+            href="https://drive.google.com/file/d/1nf56wJ4ZMQwGK14ghYaeLt85sZ-oiyy_/view?usp=sharing"
             target="_blank"
           >
             <i class="fa-solid fa-file"></i>
@@ -172,7 +180,7 @@
         </div>
       </div>
       <img
-        src="imgs/portraits/portrait_bw.png"
+        src="imgs/portraits/portrait_bw_edit.png"
         alt="A picture of Jason Lee with one of his keyboards"
         class="about-me__img"
       />
@@ -187,6 +195,15 @@
       <div class="my-education__body">
         <ol>
           <li>
+            <b>Aug 2018 - Jun 2022: </b> University of California, San Diego:
+            <i>Bachelor's of Science in Computer Engineering</i>
+            <p>
+              I graduated from UC San Diego in the Computer Engineering (CS25)
+              program of the Computer Science and Engineering (CSE) department
+              with a 3.419 cumulative GPA and 3.217 major GPA.
+            </p>
+          </li>
+          <li>
             <b>Aug 2014 - Jun 2018: </b> San Pasqual High School:
             <i>High School Diploma</i>
             <p>
@@ -194,35 +211,6 @@
               4.43 cumulative GPA. During my last two years of high school, I
               tutored high school algebra, calculus, and statistics for 10-12
               hours a week.
-            </p>
-          </li>
-          <li>
-            <b>Aug 2018 - Jun 2022: </b> University of California, San Diego:
-            <i>Bachelor's of Science in Computer Engineering</i>
-            <p>
-              I graduated from UC San Diego in the Computer Engineering (CS25)
-              program of the Computer Science and Engineering (CSE) department
-              with a 3.419 cumulative GPA and 3.217 major GPA. I became
-              proficient in Python, Java, and C++. I have also taken courses on
-              web development and machine learning.
-            </p>
-          </li>
-          <li>
-            <b>Jul 2022 - Sep 2022: </b> Stepik Bootcamp:
-            <i>Course Certificate with Distinction</i>
-            <p>
-              Completed the Stepik course, "Ace Your Next Coding Interview by
-              Learning Algorithms", led by fellow UCSD researchers Alexander
-              Kulikov and Pavel Pevzner and recommended to me by UCSD professor
-              Niema Moshiri. The course provides insight on how to use greedy,
-              divide and conquer, and dynamic programming strategies to solve
-              various programming problems.
-              <a
-                href="https://drive.google.com/file/d/1I4ehpbrsVicml8wUs6N4Y_8YZz0XByrq/view?usp=sharing"
-                target="_blank"
-                >Here</a
-              >
-              is the link to my certificate.
             </p>
           </li>
         </ol>
@@ -238,11 +226,25 @@
     <section class="my-projects" id="projects">
       <h2 class="section__title section__title--projects">My Projects</h2>
       <p class="section__subtitle section__subtitle--projects">
-        Some of the projects that I worked on during my time in university
+        Some of the projects that I worked on personally and while in university
       </p>
 
       <div class="portfolio">
         <!-- porfolio item 1 -->
+        <div id="wrapper">
+          <a href="keebcompanion.html" class="portfolio--item">
+            <img
+              src="imgs/projects/keebcompanion/logos/kc_logo.png"
+              alt="The logo of the KeebCompanion project"
+              class="portfolio__img"
+            />
+            <p class="upick_text">
+              KeebCompanion: A Collection of Mechanical Keyboard Tools
+            </p>
+          </a>
+        </div>
+
+        <!-- porfolio item 2 -->
         <div id="wrapper">
           <a href="upick.html" class="portfolio--item">
             <img
@@ -254,7 +256,7 @@
           </a>
         </div>
 
-        <!-- porfolio item 2 -->
+        <!-- porfolio item 3 -->
         <div id="wrapper">
           <a href="cogs108.html" class="portfolio--item">
             <img
@@ -283,7 +285,7 @@
             <a href="sat75.html" class="grid__link">
               <img
                 class="grid__image"
-                src="imgs/keyboards/thumbnails/sat75_thumbnail.jpg"
+                src="imgs/keyboards/thumbnails/sat75_thumbnail2.jpg"
                 alt="A picture of the Satisfaction 75 keyboard"
               />
               <div class="grid__overlay">
@@ -293,14 +295,14 @@
           </div>
           <!-- keyboard item 2 -->
           <div class="grid-item grid-item-2">
-            <a href="bm65.html" class="grid__link">
+            <a href="freebird.html" class="grid__link">
               <img
                 class="grid__image"
-                src="imgs/keyboards/thumbnails/bm65_thumbnail.jpg"
-                alt="A picture of the BM65 keyboard"
+                src="imgs/keyboards/thumbnails/freebird_thumbnail.jpg"
+                alt="A picture of the Freebird TKL keyboard"
               />
               <div class="grid__overlay">
-                <span>BM65</span>
+                <span>Freebird TKL</span>
               </div>
             </a>
           </div>
@@ -330,8 +332,9 @@
               </div>
             </a>
           </div>
+          <!-- omitted clunker and bm65 -->
           <!-- keyboard item 5 -->
-          <div class="grid-item grid-item-5">
+          <!-- <div class="grid-item grid-item-5">
             <a href="index.html#keyboards" class="grid__link">
               <img
                 class="grid__image"
@@ -342,9 +345,9 @@
                 <span>Freebird TKL</span>
               </div>
             </a>
-          </div>
+          </div> -->
           <!-- keyboard item 6 -->
-          <div class="grid-item grid-item-6">
+          <!-- <div class="grid-item grid-item-6">
             <a href="clunker.html" class="grid__link">
               <img
                 class="grid__image"
@@ -355,7 +358,7 @@
                 <span>Clunker</span>
               </div>
             </a>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
