started freebird page

--- a/freebird.html
+++ b/freebird.html
@@ -150,12 +150,12 @@
       </ul>
       <figure>
         <img
-          src="imgs/keyboards/freebird/freebird_layout.png"
+          src="imgs/keyboards/freebird/freebird_layout_tsangan.png"
           alt="A picture of the layout of the Freebird TKL"
           class="center__image"
         />
         <figcaption class="caption">
-          <i> The layout of the Freebird TKL (F13) </i>
+          <i> The layout of the Freebird TKL (Tsangan F13) </i>
         </figcaption>
       </figure>
 
@@ -173,11 +173,17 @@
       <!-- Build specs -->
       <h2 style="margin-top: 60px">Build Specification</h2>
       <ul>
-        <li><strong>Keycaps: </strong>21KB Blue Cadet</li>
-        <li><strong>Switches: </strong>Thic Thock Marshmallows</li>
+        <li><strong>Keycaps: </strong>OTC Modo Light</li>
+        <li>
+          <strong>Switches: </strong>JWICK Semi-Silents w/ 58g Dual Stage
+          Springs
+        </li>
         <li><strong>Plate: </strong>POM plate</li>
         <li><strong>Stabilizers: </strong>TX stabilizers</li>
-        <li><strong>Foam(s): </strong>Insert foams used here</li>
+        <li>
+          <strong>Foam(s): </strong>Plate foam, case foam (from StupidFish
+          Designs)
+        </li>
       </ul>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
